--- a/_data/advisory.yml
+++ b/_data/advisory.yml
@@ -1,23 +1,23 @@
-- name: Advisory 1
-  image: /assets/images/rhody_photo.jpg
-  bio: "advisory bio"
+- name: Munmun de Choudhury
+  image: /assets/images/munmundechoudhury.jpg
+  bio: "Munmun De Choudhury is an Associate Professor of Computer Science at the School of Interactive Computing at the Georgia Institute of Technology. She employs computational methods to study mental health and psychological well-being using data from social media sites and other digital sources. Her research has appeared in leading journals and conferences, supported by the National Science Foundation and the National Institutes of Health, and distinguished by awards from multiple leading scholarly associations."
 
-- name: Advisory 2
-  image: /assets/images/rhody_photo.jpg
-  bio: "advisory bio"
+- name: Deen Freelon
+  image: /assets/images/deen2.jpg
+  bio: "Deen Freelon is an Associate Professor in the School of Media and Journalism at the University of North Carolina, Chapel Hill. He studies political communication using computational methods applied to datasets from Twitter and other digital platforms. His research has been published in prestigious journals such as Science, supported by the Knight Foundation, and distinguished by leading professional associations."
 
-- name: Advisory 3
-  image: /assets/images/rhody_photo.jpg
-  bio: "advisory bio"
+- name: Sendhil Mullainathan
+  image: /assets/images/sendhil.jpg
+  bio: "Sendhil Mullainathan is the Romans Family Professor of Computation and Behavioral Science at the University of Chicago. A MacArthur “Genius” Fellow, his research examines how machine learning can be used to improve social policies— especially those related to medicine— and uncover biomedical insights from large-scale health data."
 
-- name: Advisory 4
-  image: /assets/images/rhody_photo.jpg
-  bio: "advisory bio"
+- name: Jennifer Pan
+  image: /assets/images/JenniferPan.jpg
+  bio: "Jennifer Pan is an Assistant Professor of Political Science, Communications, and Sociology at Stanford University. She studies authoritarian politics using experimental and computational methods with large-scale datasets in China and Saudi Arabia. Her work has been published in prestigious journals such as Science, supported by the National Science Foundation, and recognized by awards from the International Communication Association."
 
-- name: Advisory 5
-  image: /assets/images/rhody_photo.jpg
-  bio: "advisory bio"
+- name: Duncan Watts
+  image: /assets/images/duncan.jpg
+  bio: "Duncan Watts is the Stevens University Professor at the University of Pennsylvania, where he is also professor of Computer and Information Science (SEAS), Communications (Annenberg), and Operations, Information, and Decisions (Wharton). Watts is a founding figure in the field of computational social science. His work in social network theory, collective dynamics, and diffusion models has been cited more than 100,000 times."
 
-- name: Advisory 6
-  image: /assets/images/rhody_photo.jpg
-  bio: "advisory bio"
+- name: Chris Callison Burch
+  image: /assets/images/placeholderPic.png
+  bio: ". Chris Callison-Burch is Associate Professor of Computer and Information Science at the University of Pennsylvania, with expertise in natural language processing and crowdsourcing. He has more than 100 publications,  served on the editorial boards of the journals Transactions of the ACL (TACL) and Computational Linguistics, and received faculty research awards from Google, Microsoft, Amazon, the Sloan Foundation, and DARPA, among others."
