--- a/_data/advisory.yml
+++ b/_data/advisory.yml
@@ -24,4 +24,4 @@
 
 - name: Chris Callison Burch
   image: /assets/images/placeholderPic.png
-  bio: ". Chris Callison-Burch is Associate Professor of Computer and Information Science at the University of Pennsylvania, with expertise in natural language processing and crowdsourcing. He has more than 100 publications,  served on the editorial boards of the journals Transactions of the ACL (TACL) and Computational Linguistics, and received faculty research awards from Google, Microsoft, Amazon, the Sloan Foundation, and DARPA, among others."
+  bio: "Chris Callison-Burch is Associate Professor of Computer and Information Science at the University of Pennsylvania, with expertise in natural language processing and crowdsourcing. He has more than 100 publications,  served on the editorial boards of the journals Transactions of the ACL (TACL) and Computational Linguistics, and received faculty research awards from Google, Microsoft, Amazon, the Sloan Foundation, and DARPA, among others."
