--- a/_data/advisory.yml
+++ b/_data/advisory.yml
@@ -23,5 +23,5 @@
   bio: "Duncan Watts is the Stevens University Professor at the University of Pennsylvania, where he is also professor of Computer and Information Science (SEAS), Communications (Annenberg), and Operations, Information, and Decisions (Wharton). Watts is a founding figure in the field of computational social science. His work in social network theory, collective dynamics, and diffusion models has been cited more than 100,000 times."
 
 - name: Chris Callison Burch
-  image: /assets/images/placeholderPic.png
+  image: /assets/images/callison-burch-headshot.jpg
   bio: "Chris Callison-Burch is Associate Professor of Computer and Information Science at the University of Pennsylvania, with expertise in natural language processing and crowdsourcing. He has more than 100 publications,  served on the editorial boards of the journals Transactions of the ACL (TACL) and Computational Linguistics, and received faculty research awards from Google, Microsoft, Amazon, the Sloan Foundation, and DARPA, among others."
