--- a/_data/advisory.yml
+++ b/_data/advisory.yml
@@ -25,3 +25,8 @@
 - name: Chris Callison Burch
   image: /assets/images/callison-burch-headshot.jpg
   bio: "Chris Callison-Burch is Associate Professor of Computer and Information Science at the University of Pennsylvania, with expertise in natural language processing and crowdsourcing. He has more than 100 publications,  served on the editorial boards of the journals Transactions of the ACL (TACL) and Computational Linguistics, and received faculty research awards from Google, Microsoft, Amazon, the Sloan Foundation, and DARPA, among others."
+
+- name: "Naniette H. Coleman"
+  image: /assets/images/naniette_coleman.jpg
+  bio: "Naniette H. Coleman is a PhD candidate in Sociology at the University of California Berkeley and a multi-year UC-National Laboratory Graduate Fellow (Los Alamos). Her work sits at the intersection of the sociology of culture and organizations and focuses on cybersecurity, surveillance, and privacy in the US context. Specifically, Naniette examines how organizations assess risk, make decisions, and respond to data breaches and requirements for organizational compliance with state, federal, and international privacy laws. Naniette is a SICSS-Princeton 2019 alum and the founder of SICSS-Howard/Mathematica, the first and only summer institute at a Historically Black College or University." 
+
